# ModpackStore-Unicorn

./: MODPACK_FEATURES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  splash.html  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: build-canary.yml  build.yml
src/: App.css  App.tsx  consts.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config_schema.yml
src-tauri/src/: main.rs
src-tauri/src/config/: mod.rs  schema.rs  validation.rs
src-tauri/src/core/: accounts_manager.rs  auth.rs  forge_launcher.rs  instance_bootstrap.rs  instance_launcher.rs  instance_manager.rs  java_manager.rs  microsoft_auth.rs  minecraft_account.rs  minecraft_instance.rs  minecraft_launcher.rs  mod.rs  models.rs  network_utilities.rs  tasks_manager.rs  vanilla_launcher.rs
src-tauri/src/core/minecraft/: launcher.rs  mod.rs  paths.rs
src-tauri/src/core/minecraft/arguments/: mod.rs  processor.rs  rules.rs
src-tauri/src/core/minecraft/classpath/: builder.rs  mod.rs
src-tauri/src/core/minecraft/manifest/: merger.rs  mod.rs  parser.rs
src-tauri/src/core/prelaunch_appearance/: mod.rs
src-tauri/src/helpers/: launch_helper.rs  mod.rs
src-tauri/src/interfaces/: game_launcher.rs  mod.rs
src-tauri/src/utils/: config_manager.rs
src/components/: AccountCard.tsx  AddAccountDialog.tsx  AppTitleBar.tsx  CategoryHorizontalSection.tsx  CommandPalette.tsx  ConfigurationDialog.tsx  CreateInstanceDialog.tsx  CurrentUser.tsx  EditInstanceInfo.tsx  InstanceCard.tsx  InstanceCrashDialog.tsx  KonamiCode.tsx  LauncherBackgroundVideo.tsx  ModpackCard.tsx  NoticeTestBuild.tsx  PreLaunchQuickActions.tsx  RunningInstances.tsx  RunningTasks.tsx  UpdateStatus.tsx
src/components/creators/: CreatorsLayout.tsx
src/components/home/: MainHeader.tsx
src/components/install-modpacks/: CreateInstanceDialog.tsx  InstallOptionsDialog.tsx  (+3 more)
src/icons/: CreeperIcon.tsx  DiscordIcon.tsx  MicrosoftIcon.tsx  PatreonIcon.tsx
src/lib/: analytics.ts
src/services/: getModpacks.ts  microsoft.ts
src/splash/: index.tsx
src/stores/: AuthContext.tsx  ConfigDialogContext.tsx  GlobalContext.tsx  InstancesContext.tsx  ReloadContext.tsx  TasksContext.tsx
src/types/: ApiResponses.d.ts  PreLaunchAppeareance.d.ts  TauriCommandReturns.d.ts
src/utils/: ConfigManager.ts  appManagement.ts  checkConnection.tsx  prelaunch.ts  sounds.ts
src/views/: AccountsSection.tsx  ConfigurationSection.tsx  ExploreSection.tsx  Login.tsx  ModpackOverview.tsx  MyInstancesSection.tsx  NotFound.tsx  OfflineMode.tsx  PreLaunchInstance.tsx
~/.tauri/: modpackstore.key  modpackstore.key.pub
(+1 files in other folders)
