[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "dev-alexitoo-modpackstore"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
dirs = "6.0.0"
flate2 = "1.1.1"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = {version = "0.14", features = ["server", "http1", "tcp"] }
lazy_static = "1.4"
log = "0.4"
once_cell = "1.8"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tar = "0.4.44"
tauri = {version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-drpc = "0.1.6"
tauri-plugin-fs = "2"
tauri-plugin-http = {version = "2", features = ["json", "blocking"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tokio = "1.44.2"
url = "2.5.4"
uuid = {version = "1.3", features = ["v4", "v3", "serde"] }
zip = "2.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
